added new class that represents deck of player and refactored program due to new class, also improved problems that accured after PR